fixed polling functionality

--- a/democrame/democrame.html
+++ b/democrame/democrame.html
@@ -3,15 +3,13 @@
 </head>
 
 <body>
-  <h1 id="header">Democra.me</h1>
-
-  {{> hello}}
-  
+<!-- {{> hello}} -->
 </body>
 
 <template name="hello">  
-<!--This ahref is incomplete, I am trying to route to the polling page-->
-  <a href="{{pathFor 'polling'}}"><div id="voteA" class="ui huge top attached teal button">A</div></a>
+  <h1 id="header">Democra.me</h1>  
+
+  <div id="voteA" class="ui huge top attached teal button">A</div>
   <div class="ui attached segment"></div>
   <div id="voteB" class="ui huge bottom attached teal button">B</div>
   <div class="ui attached segment"></div>
@@ -20,8 +18,9 @@
   <div class="ui attached segment"></div>
 
   <div id="voteD" class="ui huge bottom attached teal button">D</div>
-  <p>Users have voted for A {{voteA}} times.</p>
+ <!--  <p>Users have voted for A {{voteA}} times.</p>
   <p>Users have voted for B {{voteB}} times.</p>
   <p>Users have voted for C {{voteC}} times.</p>
-  <p>Users have voted for D {{voteD}} times.</p>
+  <p>Users have voted for D {{voteD}} times.</p> -->
 </template>
+
