--- a/democrame/voteme.html
+++ b/democrame/voteme.html
@@ -2,29 +2,36 @@
   <title></title>
 </head>
 
-<body>
-  <h1 id="polling">Vote.me</h1>
-
-  {{> polling}}
-  
-</body>
-
 <template name="polling">
- <div class="ui indicating progress" id="choiceA">
+ <div class="ui indicating progress" id="choiceA" data-percent="{{voteA}}">
   <div class="bar"></div>
   <div class="label">A</div>
 </div>
-<div class="ui indicating progress" id="choiceB">
+<div class="ui indicating progress" id="choiceB" data-percent="{{voteB}}">
   <div class="bar"></div>
   <div class="label">B</div>
 </div>
-<div class="ui indicating progress" id="choiceC">
+<div class="ui indicating progress" id="choiceC" data-percent="{{voteC}}">
   <div class="bar"></div>
   <div class="label">C</div>
 </div>
-<div class="ui indicating progress" id="choiceD">
+<div class="ui indicating progress" id="choiceD" data-percent="{{voteD}}">
   <div class="bar"></div>
   <div class="label">D</div>
 </div>
+
+<script type="text/javascript">
+  $('#choiceA').progress();
+  $('#choiceB').progress();
+  $('#choiceC').progress();
+  $('#choiceD').progress();
+</script>
+
+ <p>Users have voted for A {{voteA}} times.</p>
+  <p>Users have voted for B {{voteB}} times.</p>
+  <p>Users have voted for C {{voteC}} times.</p>
+  <p>Users have voted for D {{voteD}} times.</p>
+<div class="ui button" id="return">Return To Slides</div>
+
 
 </template>
